--- a/css/style.css
+++ b/css/style.css
@@ -557,19 +557,14 @@ button:before {
     margin-top: 40px;
   }
 }
-.concept__inner {
-  max-width: 1700px;
-  margin: 0 auto;
-}
 .concept__container {
   display: flex;
   position: relative;
 }
 @media screen and (min-width: 768px) {
   .concept__container {
-    width: 1150px;
+    width: 100%;
     height: 764px;
-    justify-content: space-between;
   }
 }
 @media screen and (max-width: 767px) {
@@ -581,6 +576,8 @@ button:before {
 }
 .concept__left {
   width: 50%;
+  max-width: 600px;
+  margin-left: calc(50% - 640px);
 }
 @media screen and (max-width: 767px) {
   .concept__left {
@@ -588,10 +585,16 @@ button:before {
     height: 400px;
   }
 }
-@media screen and (min-width: 768px) {
-  .concept__right {
-    width: 470px;
-  }
+.concept__left img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: bottom;
+     object-position: bottom;
+}
+.concept__right {
+  width: 550px;
+  padding-left: 80px;
 }
 .concept__message {
   margin-top: 60px;
@@ -629,7 +632,7 @@ button:before {
   position: absolute;
   bottom: -45px;
   background: #EAE0D5;
-  width: 100%;
+  width: calc(50% + 590px);
   height: 300px;
 }
 @media screen and (max-width: 767px) {
@@ -3121,6 +3124,7 @@ button:before {
 @media screen and (min-width: 768px) {
   .completion__container {
     margin: 80px auto 160px;
+    width: 688px;
   }
 }
 @media screen and (max-width: 767px) {
