--- a/css/style.scss
+++ b/css/style.scss
@@ -644,20 +644,13 @@ position: relative;
         }
     }
 
-    &__inner {
-        max-width: 1700px;
-        margin: 0 auto;
-    }
-
     &__container {
         display: flex;
         position: relative;
 
         @include mq(md) {
-        width: 1150px;
+        width: 100%;
         height: 764px;
-        justify-content: space-between;
-
         }
 
         @include mq(sm) {
@@ -670,17 +663,24 @@ position: relative;
 
     &__left {
         width: 50%;
+        max-width: 600px;
+        margin-left: calc(50% - 640px);
+
         @include mq(sm) {
             width: 315px;
             height: 400px;
         }
+
+        & img {
+            height: 100%;
+            object-fit: cover;
+            object-position: bottom;
+        }
     }
 
     &__right {
-
-        @include mq(md) {
-        width: 470px;
-        }
+        width: 550px;
+        padding-left: 80px;
 
         @include mq(sm) {
         //width: 100%;
@@ -723,7 +723,7 @@ position: relative;
         position: absolute;
         bottom: -45px;
         background: $base-color;
-        width: 100%;
+        width: calc(50% + 590px);
         height: 300px;
 
         @include mq(sm) {
